2003-08-21  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/submarine.c: fixed to display the help

2003-08-18  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/Makefile.am: removed uneeded gcompris_pixmap.assetml
	* configure.in: changed ASSETMLDIR
	* gcompris.spec.in: created gcompris-assetml-flags package
	* src/boards/submarine.c: (submarine_create_item), (setRegleur),
	(setBallastAV), (setBallastAR): added rectangle to show water level in tanks
	* src/gcompris/config.c: added hindian
	* po/de.po: updated by Ronny Standtke <Ronny.Standtke@gmx.de>

2003-08-16  Guntupalli Karunakar  <karunakar@freedomink.org>
	
	* configure.in: Added "hi" to ALL_LINGUAS.

2003-08-15  Bruno coudoin  <bruno.coudoin@free.fr>

	* Makefile.am: changed rule for the translation report to work even if gcompris.pot is not 
	* there
	* boards/submarine/big_explosion.png: removed explosion and mine in submarine
	* boards/submarine/explosion.png: removed explosion and mine in submarine
	* boards/submarine/mine.png: removed explosion and mine in submarine
	* boards/submarine/whale.png: removed explosion and mine in submarine
	* boards/submarine/whale_hit.png: removed explosion and mine in submarine
	* gcompris.desktop.in: updated gcompris name to "educational suite"
	* gcompris.spec.in: updated gcompris name to "educational suite"
	* src/boards/submarine.c: (pause_board), (start_board),
	(end_board), (set_level), (is_our_board), (submarine_next_level),
	(submarine_destroy_all_items), (submarine_create_item),
	(update_timeout), (update_timeout_slow),
	(update_timeout_very_slow), (game_won), (ok),
	(ballast_av_purge_event), (ballast_ar_purge_event),
	(regleur_purge_event), (ballast_ar_chasse_event),
	(ballast_av_chasse_event), (regleur_chasse_event),
	(barre_av_event), (barre_ar_event), (engine_event),
	(air_compressor_event), (battery_charger_event), (setSpeed),
	(setBattery), (setAir), (setRegleur), (setBallastAV),