@@ -1,6 +1,7 @@
 2003-08-21  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	* src/boards/submarine.c: fixed to display the help
+	* src/boards/reversecount.c: fixed highlighting the dice was resseting the dic to 1
 
 2003-08-18  Bruno coudoin  <bruno.coudoin@free.fr>
 
